// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using ScrumSoft.Infrastructure.Persistence;

#nullable disable

namespace ScrumSoft.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(ScrumSoftDbContext))]
    [Migration("20260806181235_SemillaDeDemostracion")]
    partial class SemillaDeDemostracion
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Columna", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id_columna");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(1)
                        .HasColumnType("character varying(1)")
                        .HasColumnName("estado");

                    b.Property<DateTimeOffset?>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_actualizacion");

                    b.Property<DateTimeOffset>("FechaCreacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_creacion");

                    b.Property<Guid>("IdProyecto")
                        .HasColumnType("uuid")
                        .HasColumnName("id_proyecto");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("nombre");

                    b.Property<int>("Orden")
                        .HasColumnType("integer")
                        .HasColumnName("orden");

                    b.HasKey("Id")
                        .HasName("pk_columnas");

                    b.HasIndex("IdProyecto", "Orden")
                        .HasDatabaseName("ix_columnas_proyecto_orden");

                    b.ToTable("columnas", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444001"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            Nombre = "Backlog",
                            Orden = 1000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444002"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            Nombre = "En progreso",
                            Orden = 2000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444003"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            Nombre = "En revision",
                            Orden = 3000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444004"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            Nombre = "Hecho",
                            Orden = 4000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444011"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333332"),
                            Nombre = "Por hacer",
                            Orden = 1000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444012"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333332"),
                            Nombre = "Haciendo",
                            Orden = 2000
                        },
                        new
                        {
                            Id = new Guid("44444444-4444-4444-4444-444444444013"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333332"),
                            Nombre = "Listo",
                            Orden = 3000
                        });
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Proyecto", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id_proyecto");

                    b.Property<string>("Descripcion")
                        .HasColumnType("text")
                        .HasColumnName("descripcion");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(1)
                        .HasColumnType("character varying(1)")
                        .HasColumnName("estado");

                    b.Property<string>("EstadoProyecto")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("estado_proyecto");

                    b.Property<DateTimeOffset?>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_actualizacion");

                    b.Property<DateTimeOffset>("FechaCreacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_creacion");

                    b.Property<DateOnly?>("FechaFinPrevista")
                        .HasColumnType("date")
                        .HasColumnName("fecha_fin_prevista");

                    b.Property<DateOnly>("FechaInicio")
                        .HasColumnType("date")
                        .HasColumnName("fecha_inicio");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("nombre");

                    b.HasKey("Id")
                        .HasName("pk_proyectos");

                    b.HasIndex("Nombre")
                        .HasDatabaseName("ix_proyectos_nombre");

                    b.ToTable("proyectos", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("33333333-3333-3333-3333-333333333331"),
                            Descripcion = "Modulo inicial de gestion agil: tablero kanban, reportes y sincronizacion en tiempo real.",
                            Estado = "A",
                            EstadoProyecto = "EnProgreso",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            FechaFinPrevista = new DateOnly(2026, 3, 31),
                            FechaInicio = new DateOnly(2026, 1, 5),
                            Nombre = "Plataforma ScrumSoft"
                        },
                        new
                        {
                            Id = new Guid("33333333-3333-3333-3333-333333333332"),
                            Descripcion = "Sitio publico para que los clientes consulten el avance de sus proyectos.",
                            Estado = "A",
                            EstadoProyecto = "Planificacion",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            FechaFinPrevista = new DateOnly(2026, 6, 30),
                            FechaInicio = new DateOnly(2026, 2, 1),
                            Nombre = "Portal de clientes"
                        });
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.ProyectoUsuario", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id_proyecto_usuario");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(1)
                        .HasColumnType("character varying(1)")
                        .HasColumnName("estado");

                    b.Property<DateTimeOffset?>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_actualizacion");

                    b.Property<DateTimeOffset>("FechaAsignacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_asignacion");

                    b.Property<DateTimeOffset>("FechaCreacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_creacion");

                    b.Property<Guid>("IdProyecto")
                        .HasColumnType("uuid")
                        .HasColumnName("id_proyecto");

                    b.Property<Guid>("IdUsuario")
                        .HasColumnType("uuid")
                        .HasColumnName("id_usuario");

                    b.HasKey("Id")
                        .HasName("pk_proyecto_usuarios");

                    b.HasIndex("IdUsuario")
                        .HasDatabaseName("ix_proyecto_usuarios_usuario");

                    b.HasIndex("IdProyecto", "IdUsuario")
                        .IsUnique()
                        .HasDatabaseName("ux_proyecto_usuarios")
                        .HasFilter("estado = 'A'");

                    b.ToTable("proyecto_usuarios", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("66666666-6666-6666-6666-666666666001"),
                            Estado = "A",
                            FechaAsignacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            IdUsuario = new Guid("11111111-1111-1111-1111-111111111111")
                        },
                        new
                        {
                            Id = new Guid("66666666-6666-6666-6666-666666666002"),
                            Estado = "A",
                            FechaAsignacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333331"),
                            IdUsuario = new Guid("22222222-2222-2222-2222-222222222222")
                        },
                        new
                        {
                            Id = new Guid("66666666-6666-6666-6666-666666666003"),
                            Estado = "A",
                            FechaAsignacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdProyecto = new Guid("33333333-3333-3333-3333-333333333332"),
                            IdUsuario = new Guid("11111111-1111-1111-1111-111111111111")
                        });
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Tarea", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id_tarea");

                    b.Property<string>("Descripcion")
                        .HasColumnType("text")
                        .HasColumnName("descripcion");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(1)
                        .HasColumnType("character varying(1)")
                        .HasColumnName("estado");

                    b.Property<DateTimeOffset?>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_actualizacion");

                    b.Property<DateTimeOffset>("FechaCreacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_creacion");

                    b.Property<Guid>("IdColumna")
                        .HasColumnType("uuid")
                        .HasColumnName("id_columna");

                    b.Property<Guid?>("IdResponsable")
                        .HasColumnType("uuid")
                        .HasColumnName("id_responsable");

                    b.Property<int>("Orden")
                        .HasColumnType("integer")
                        .HasColumnName("orden");

                    b.Property<string>("Prioridad")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("prioridad");

                    b.Property<string>("Titulo")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("titulo");

                    b.HasKey("Id")
                        .HasName("pk_tareas");

                    b.HasIndex("IdResponsable")
                        .HasDatabaseName("ix_tareas_responsable");

                    b.HasIndex("IdColumna", "Orden")
                        .HasDatabaseName("ix_tareas_columna_orden");

                    b.ToTable("tareas", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555001"),
                            Descripcion = "Tercer formato de salida, ademas de PDF y Excel.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444001"),
                            Orden = 1000,
                            Prioridad = "Baja",
                            Titulo = "Exportar el reporte a CSV"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555002"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444001"),
                            IdResponsable = new Guid("22222222-2222-2222-2222-222222222222"),
                            Orden = 2000,
                            Prioridad = "Media",
                            Titulo = "Filtrar el tablero por etiqueta"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555003"),
                            Descripcion = "Registrar quien movio cada tarjeta y cuando.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444001"),
                            Orden = 3000,
                            Prioridad = "Baja",
                            Titulo = "Historial de cambios de una tarea"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555004"),
                            Descripcion = "El orden se guarda por vecinos, no por indice.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444002"),
                            IdResponsable = new Guid("11111111-1111-1111-1111-111111111111"),
                            Orden = 1000,
                            Prioridad = "Alta",
                            Titulo = "Arrastrar tarjetas entre columnas"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555005"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444002"),
                            IdResponsable = new Guid("22222222-2222-2222-2222-222222222222"),
                            Orden = 2000,
                            Prioridad = "Media",
                            Titulo = "Avisar por correo al asignar una tarea"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555006"),
                            Descripcion = "Encabezado con los datos del proyecto y tabla de tareas.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444003"),
                            IdResponsable = new Guid("11111111-1111-1111-1111-111111111111"),
                            Orden = 1000,
                            Prioridad = "Alta",
                            Titulo = "Reporte PDF con el resumen del proyecto"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555007"),
                            Descripcion = "Token firmado y guard de ruta en el cliente.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444004"),
                            IdResponsable = new Guid("11111111-1111-1111-1111-111111111111"),
                            Orden = 1000,
                            Prioridad = "Critica",
                            Titulo = "Inicio de sesion con JWT"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555008"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444004"),
                            IdResponsable = new Guid("22222222-2222-2222-2222-222222222222"),
                            Orden = 2000,
                            Prioridad = "Media",
                            Titulo = "Alta y edicion de proyectos"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555011"),
                            Descripcion = "Entidades y relaciones del portal publico.",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444011"),
                            IdResponsable = new Guid("11111111-1111-1111-1111-111111111111"),
                            Orden = 1000,
                            Prioridad = "Alta",
                            Titulo = "Definir el modelo de datos"
                        },
                        new
                        {
                            Id = new Guid("55555555-5555-5555-5555-555555555012"),
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            IdColumna = new Guid("44444444-4444-4444-4444-444444444012"),
                            IdResponsable = new Guid("11111111-1111-1111-1111-111111111111"),
                            Orden = 1000,
                            Prioridad = "Media",
                            Titulo = "Bocetar la pantalla de avance"
                        });
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Usuario", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id_usuario");

                    b.Property<string>("CorreoElectronico")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("correo_electronico");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(1)
                        .HasColumnType("character varying(1)")
                        .HasColumnName("estado");

                    b.Property<DateTimeOffset?>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_actualizacion");

                    b.Property<DateTimeOffset>("FechaCreacion")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("fecha_creacion");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("character varying(150)")
                        .HasColumnName("nombre");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("password_hash");

                    b.Property<string>("Rol")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("rol");

                    b.HasKey("Id")
                        .HasName("pk_usuarios");

                    b.HasIndex("CorreoElectronico")
                        .IsUnique()
                        .HasDatabaseName("ux_usuarios_correo");

                    b.ToTable("usuarios", (string)null);

                    b.HasData(
                        new
                        {
                            Id = new Guid("11111111-1111-1111-1111-111111111111"),
                            CorreoElectronico = "admin@scrumsoft.com",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            Nombre = "Administrador",
                            PasswordHash = "$2a$12$ARg7iJNOV843LqiS8ssGfOHp1tSWigIUANkA7soFy708ZExz7g1yO",
                            Rol = "Administrador"
                        },
                        new
                        {
                            Id = new Guid("22222222-2222-2222-2222-222222222222"),
                            CorreoElectronico = "miembro@scrumsoft.com",
                            Estado = "A",
                            FechaCreacion = new DateTimeOffset(new DateTime(2026, 1, 1, 0, 0, 0, 0, DateTimeKind.Unspecified), new TimeSpan(0, 0, 0, 0, 0)),
                            Nombre = "Miembro de prueba",
                            PasswordHash = "$2a$12$104Q7YvMTtAmNJxFxsTjl.N3BPTPtGnU1iVskwbfPp3gg4CQpekGa",
                            Rol = "Miembro"
                        });
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Columna", b =>
                {
                    b.HasOne("ScrumSoft.Domain.Entities.Proyecto", "Proyecto")
                        .WithMany("_columnas")
                        .HasForeignKey("IdProyecto")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_columnas_proyectos_id_proyecto");

                    b.Navigation("Proyecto");
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.ProyectoUsuario", b =>
                {
                    b.HasOne("ScrumSoft.Domain.Entities.Proyecto", "Proyecto")
                        .WithMany("_miembros")
                        .HasForeignKey("IdProyecto")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_proyecto_usuarios_proyectos_id_proyecto");

                    b.HasOne("ScrumSoft.Domain.Entities.Usuario", "Usuario")
                        .WithMany("_proyectos")
                        .HasForeignKey("IdUsuario")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_proyecto_usuarios_usuarios_id_usuario");

                    b.Navigation("Proyecto");

                    b.Navigation("Usuario");
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Tarea", b =>
                {
                    b.HasOne("ScrumSoft.Domain.Entities.Columna", "Columna")
                        .WithMany()
                        .HasForeignKey("IdColumna")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_tareas_columnas_id_columna");

                    b.HasOne("ScrumSoft.Domain.Entities.Usuario", "Responsable")
                        .WithMany()
                        .HasForeignKey("IdResponsable")
                        .OnDelete(DeleteBehavior.SetNull)
                        .HasConstraintName("fk_tareas_usuarios_id_responsable");

                    b.Navigation("Columna");

                    b.Navigation("Responsable");
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Proyecto", b =>
                {
                    b.Navigation("_columnas");

                    b.Navigation("_miembros");
                });

            modelBuilder.Entity("ScrumSoft.Domain.Entities.Usuario", b =>
                {
                    b.Navigation("_proyectos");
                });
#pragma warning restore 612, 618
        }
    }
}
